--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,4 @@ replay_pid*
 # End of https://www.toptal.com/developers/gitignore/api/kotlin
 
 toss_semitest/
-kotlin_module
+KotlinAlgo.kotlin_module
